--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 </head>
 <body>
   <H1>YUNK VINO</H1>  
-  <p> Yunk Vino, mais conhecido como o <strong>GOAT</strong> do trap, 26 anos porém começou a conquistar suas coisas em 2018 de forma independente.</P>
-   Em 2019 ele abriu um show do Racionais em Curitiba ao lado do rapper <strong>AKA RASTA</strong>.
-   <H2>YKGG</H2> 
-   <img scr="VINO">
+  <p> Yunk Vino, mais conhecido como o <strong>GOAT</strong> do trap, 26 anos porém começou a conquistar suas coisas em 2018 de forma independente.
+  </P> Em 2019 ele abriu um show do Racionais em Curitiba ao lado do rapper <strong>AKA RASTA</strong>.
+   <H2>YKGG
    <H2>MÚSICAS PREFERIDAS
     <p>237</p>
     <p>midghts</p>
